[gd_scene load_steps=9 format=3 uid="uid://ppwvmgwyj62s"]

[ext_resource type="Script" path="res://level_3.gd" id="1_7hwi6"]
[ext_resource type="PackedScene" uid="uid://ry5ablht60rh" path="res://environment/starfield.tscn" id="1_ntxhg"]
[ext_resource type="PackedScene" uid="uid://cncm06b241qss" path="res://enemy/enemy_ship_1.tscn" id="3_51gul"]
[ext_resource type="PackedScene" uid="uid://cjekqwyqierwa" path="res://environment/blackhole/whitehole.tscn" id="4_01uvb"]
[ext_resource type="PackedScene" uid="uid://cdajpo3p4a553" path="res://environment/blackhole/blackhole.tscn" id="6_fl5j1"]
[ext_resource type="PackedScene" uid="uid://cnupsgxmntlj" path="res://border/rectangularborder.tscn" id="6_lmmtl"]
[ext_resource type="FontFile" uid="uid://l7icxmqem2hm" path="res://ui/assets/font/ethnocentric rg.otf" id="7_qt5a5"]
[ext_resource type="PackedScene" uid="uid://620nw864h08l" path="res://ui/ui.tscn" id="8_0w528"]

[node name="Level3" type="Node2D"]
script = ExtResource("1_7hwi6")

[node name="starfield" parent="." instance=ExtResource("1_ntxhg")]

[node name="EnemyShip1" parent="." instance=ExtResource("3_51gul")]
position = Vector2(-2000, 2000)
firing_randomness = 0.05
firing_cone = 20.0
speed = 200.0

[node name="EnemyShip2" parent="." instance=ExtResource("3_51gul")]
position = Vector2(2000, -2000)
firing_randomness = 0.05
firing_cone = 20.0
speed = 200.0

[node name="player_spawn" type="Marker2D" parent="."]

[node name="whitehole" parent="." instance=ExtResource("4_01uvb")]
position = Vector2(2000, 2000)

[node name="rectangularborder" parent="." instance=ExtResource("6_lmmtl")]
size = Vector2(5000, 5000)
topleft = Vector2(-2500, -2500)

[node name="blackhole" parent="." instance=ExtResource("6_fl5j1")]
position = Vector2(-2000, -2000)

[node name="Label" type="Label" parent="."]
offset_left = -434.0
offset_top = 122.0
offset_right = 434.0
offset_bottom = 266.0
theme_override_fonts/font = ExtResource("7_qt5a5")
theme_override_font_sizes/font_size = 36
text = "multiple targets detected
they have you surrounded
you know what to do"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ui" parent="." instance=ExtResource("8_0w528")]
